Naftah - updated tests - gradle